--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,5 +10,33 @@
     <header>
         <h1>¿Quien soy?</h1>
     </header>
+    <section>
+        <p>Hola, mi nombre es Juan Diego León Domínguez, tengo 16 años y actualmente curso grado décimo en un colegio católico y de forma simultanea el bootcamp de desarrollo web full stack, previamente el año pasado hice un curso de desarrollo web de forma virtual con una empresa argentina llamada coderhouse, el cual aprobe con exito con una note de 8 sobre 10, actualmente realizó una página web para mi colegio sobre un evento especial que se realiza una vez al año.</p>
+    </section>
+    <div>
+        <p>Te mostraré el primer proyecto que hice el cual entregue como proyecto final para el curso de desarrollo web, el cual fue mi primer paso a la programación, la página fue hecha con el fin de ayudar a mi madre en su emprendimiento el cuál se llama <span><a href="https://motivateconarte.000webhostapp.com/index.html" target="_blank">Motivate con Arte,</a></span>es una página 100% responsive, y la imágen de abajo es mi certificado.</p>
+        <img src="../Assets/Img/61fb34f22daa4f002827bea4.png" alt="certificado curso desarrollo web" width="600px">
+    </div>
+    <section>
+        <p>Esta es mi comida favorita</p>
+        <ul>
+            <li>Las comidas rápidas</li>
+            <li>No me gustan tanto las verduras</li>
+            <li>Amo el spaghetti a la carbonara</li>
+        </ul>
+        <p>Estos son mis hobbies:</p>
+        <ol>
+            <li>Jugar videojuegos</li>
+            <li>Ir a cine</li>
+            <li>Intento crear como "mini paginas" para no perder mis conocimientos</li>
+        </ol>
+        <article>
+            <div>
+                <a href="https://playvalorant.com/es-mx/?gclid=CjwKCAjwk_WVBhBZEiwAUHQCmSHrzgZEagynxZgxvn4pHf0c_IiXMchPvEWSjH43vHr5WrLjbeYuFRoCAxEQAvD_BwE&gclsrc=aw.ds" target="_blank"><img src="../Assets/Img/descarga.jpg" alt="valorant mi juego favorito"></a>
+                <p>Esta es una imagen de mi juego favorito el cual puedes descargar dandole click, y abajo trendrás un video de mi primera mejor jugada</p>
+            </div>
+            <video controls autoplay muted src="../Assets/Video/VALORANT   2021-03-10 15-13-44.mp4" width="700"></video>
+        </article>
+    </section>
 </body>
 </html>
