--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Assets/CSS/style.css">
     <title>HOLA MUNDO</title>
 </head>
 <body>
@@ -11,33 +12,42 @@
         <h1>¿Quien soy?</h1>
         <p>Hola, mi nombre es Juan Diego León Domínguez, tengo 16 años y actualmente curso grado décimo en un colegio católico privado llamado Cardenal Sancha, simultaneamente un bootcamp de desarrollo web full stack con una alianza de BIT y IBERO, previamente el año pasado hice un curso de desarrollo web de forma virtual con una empresa argentina llamada coderhouse el cuál aprobé exitosamente con una nota de 8 sobre 10, actualmente realizó una página web para mi colegio sobre un evento especial llamado "Día de la familia" que se realiza una vez al año.</p>
     </header>
-    <div>
-        <p>Te mostraré el primer proyecto que hice el cual entregue como proyecto final para el curso de desarrollo web, el cual fue mi primer paso a la programación, la página fue hecha con el fin de ayudar a mi madre en su emprendimiento el cuál se llama <span><a href="https://motivateconarte.000webhostapp.com/index.html" target="_blank">Motivate con Arte,</a></span>es una página 100% responsive, y la imágen de abajo es mi certificado.</p>
-        <img src="../Assets/Img/61fb34f22daa4f002827bea4.png" alt="certificado curso desarrollo web" width="600px">
-    </div>
-    <section>
-        <p>Esta es mi comida favorita</p>
-        <ul>
-            <li>Las comidas rápidas</li>
-            <li>Algunas verduras como lo puede ser el tomate</li>
-            <li>El spaghetti a la carbonara</li>
-            <li>Cualquier cosa picante</li>
-            <li>La salsa BBQ y la de tomate</li>
-        </ul>
-        <p>Estos son mis hobbies:</p>
-        <ol>
-            <li>Jugar videojuegos</li>
-            <li>Ir a cine</li>
-            <li>Intento crear como "mini paginas" para no perder mis conocimientos</li>
-            <li>Jugar fútbol</li>
-        </ol>
-        <article>
-            <div>
-                <a href="https://playvalorant.com/es-mx/?gclid=CjwKCAjwk_WVBhBZEiwAUHQCmSHrzgZEagynxZgxvn4pHf0c_IiXMchPvEWSjH43vHr5WrLjbeYuFRoCAxEQAvD_BwE&gclsrc=aw.ds" target="_blank"><img src="../Assets/Img/descarga.jpg" alt="valorant mi juego favorito"></a>
-                <p>Esta es una imagen de mi juego favorito el cual puedes descargar dandole click, y abajo trendrás un video de mi mejor jugada cuando empecé a jugar</p>
-            </div>
-            <video controls autoplay muted src="../Assets/Video/VALORANT   2021-03-10 15-13-44.mp4" width="700"></video>
-        </article>
-    </section>
+    <main>
+        <section>
+            <article>
+                <p>Te mostraré el primer proyecto que hice el cual entregue como proyecto final para el curso de desarrollo web, el cual fue mi primer paso a la programación, la página fue hecha con el fin de ayudar a mi madre en su emprendimiento el cuál se llama <span><a href="https://motivateconarte.000webhostapp.com/index.html" target="_blank">Motivate con Arte,</a></span>es una página 100% responsive, y la imágen de abajo es mi certificado.</p>
+                <div>
+                    <img src="../Assets/Img/61fb34f22daa4f002827bea4.png" alt="certificado curso desarrollo web" width="600px">
+                </div>
+            </article> 
+            <p>Esta es mi comida favorita: </p>
+            <article>
+                <ul>
+                    <li>Las comidas rápidas</li>
+                    <li>Algunas verduras como lo puede ser el tomate</li>
+                    <li>El spaghetti a la carbonara</li>
+                    <li>Cualquier cosa picante</li>
+                    <li>La salsa BBQ y la de tomate</li>
+                </ul>
+            </article>
+            <p>Estos son mis hobbies:</p>
+            <article>
+                <ol>
+                    <li>Jugar videojuegos</li>
+                    <li>Ir a cine</li>
+                    <li>Intento crear como "mini paginas" para no perder mis conocimientos</li>
+                    <li>Jugar fútbol</li>
+                </ol>
+            </article>
+            <article id="center_video">
+                    <a href="https://playvalorant.com/es-mx/?gclid=CjwKCAjwk_WVBhBZEiwAUHQCmSHrzgZEagynxZgxvn4pHf0c_IiXMchPvEWSjH43vHr5WrLjbeYuFRoCAxEQAvD_BwE&gclsrc=aw.ds" target="_blank"><img src="../Assets/Img/descarga.jpg" alt="valorant mi juego favorito"></a>
+                    <p>Esta es una imagen de mi juego favorito el cual puedes descargar dandole click, y abajo trendrás un video de mi mejor jugada cuando empecé a jugar</p>
+                    <div>
+                        <video controls autoplay muted src="../Assets/Video/VALORANT   2021-03-10 15-13-44.mp4" width="700"></video>
+                    </div>
+            </article>
+        </section>
+    </main>
+
 </body>
 </html>
