--- a/Taller 2 CSS/HTML/index.html
+++ b/Taller 2 CSS/HTML/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="../Assets/Css/style.css">
+    <link rel="shortcut icon" href="../Assets/Img/favicon.ico" type="image/x-icon">
     <title>nombre restaurante</title>
 </head>
 <body>
-    <nav>
-        <img src="../Assets/Img/restaurant.png" alt="">
-        <span>nombre restaurante</span>
+    <nav class="navbar-rest">
+        <div class="logo">
+            <img src="../Assets/Img/restaurant.png" alt="" class="size-img-logo">
+            <h5>Pepe</h5>
+        </div>
         <ul>
             <li>Home</li>
             <li>Reservas</li>
         </ul>
-        <img src="../Assets/Img/user.png" alt="">
+        <img class="size-img-logo" src="../Assets/Img/user.png" alt="">
     </nav>
-    <section>
+    <section class="banner">
         <img src="https://via.placeholder.com/1230x300" alt="">
     </section>
-    <section>
+    <section class="container1">
         <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reprehenderit, pariatur at labore, aut eligendi asperiores consectetur totam corporis dolorem adipisci. Rem fugiat, provident unde sed doloremque placeat alias eum similique sapiente aperiam nisi praesentium molestias dolore vitae assumenda delectus iste ut quasi eveniet! Dicta inventore consequuntur enim deserunt ipsam laudantium, recusandae unde repellendus alias, adipisci aperiam fugit cum voluptate quas excepturi temporibus porro error neque odit architecto delectus provident animi tempora. Officiis dolorum, hic, provident esse in dolores aliquid voluptatum alias unde, deleniti eligendi fuga reiciendis ipsum. Voluptates, facilis quam earum voluptatem maxime perferendis. Suscipit possimus reiciendis eum officia porro dignissimos error aliquid placeat, necessitatibus eligendi saepe quia quis autem repellat quasi pariatur modi repudiandae perspiciatis maxime maiores qui fugit? Accusantium pariatur cumque veniam, nulla aperiam esse deleniti, fugit, perspiciatis vitae culpa harum eveniet magni natus minima aut obcaecati repudiandae error consequatur aliquid quasi voluptatibus nemo. Praesentium, qui quia?</p>
+            <p class="texto1"> <a href="https://google.com">Lorem ipsum </a>dolor sit amet consectetur adipisicing elit. Dolor reprehenderit, pariatur at labore, aut eligendi asperiores consectetur totam corporis dolorem adipisci. Rem fugiat, provident unde sed doloremque placeat alias eum similique sapiente aperiam nisi praesentium molestias dolore vitae assumenda delectus iste ut quasi eveniet! Dicta inventore consequuntur enim deserunt ipsam laudantium, recusandae unde repellendus alias, adipisci aperiam fugit cum voluptate quas excepturi temporibus porro error neque odit architecto delectus provident animi tempora. Officiis dolorum, hic, provident esse in dolores aliquid voluptatum alias unde, deleniti eligendi fuga reiciendis ipsum. Voluptates, facilis quam earum voluptatem maxime perferendis. Suscipit possimus reiciendis eum officia porro dignissimos error aliquid placeat, necessitatibus eligendi saepe quia quis autem repellat quasi pariatur modi repudiandae perspiciatis maxime maiores qui fugit? Accusantium pariatur cumque veniam, nulla aperiam esse deleniti, fugit, perspiciatis vitae culpa harum eveniet magni natus minima aut obcaecati repudiandae error consequatur aliquid quasi voluptatibus nemo. Praesentium, qui quia?</p>
         </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/tXe56iDop9I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -34,7 +39,7 @@
         </div>
         <div>
             <img src="https://via.placeholder.com/300x200" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis fugit, cumque a atque numquam cupiditate nihil id provident blanditiis unde hic esse ratione ut ducimus illo porro ab nam culpa.</p>
+            <p class="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis fugit, cumque a atque numquam cupiditate nihil id provident blanditiis unde hic esse ratione ut ducimus illo porro ab nam culpa.</p>
         </div>
         <div>
             <img src="https://via.placeholder.com/300x200" alt="">
@@ -71,14 +76,14 @@
                 <img src="../Assets/Img/restaurant.png" alt="">
                 <span>Nombre restaurante</span>
             </div>
-            <div>
+            <div class="contaier-reds">
                 <img src="https://via.placeholder.com/32x32" alt="">
                 <img src="https://via.placeholder.com/32x32" alt="">
                 <img src="https://via.placeholder.com/32x32" alt="">
             </div>
         </section>
         <section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.5345669409253!2d-74.05046748590988!3d4.676727243168819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a921a9166bf%3A0x1c29279b4c345958!2sParque%20de%20la%2093!5e0!3m2!1ses!2sco!4v1656727425271!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.5345669409253!2d-74.05046748590988!3d4.676727243168819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a921a9166bf%3A0x1c29279b4c345958!2sParque%20de%20la%2093!5e0!3m2!1ses!2sco!4v1656727425271!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </footer>
 </body>
