--- a/Taller 2 CSS/HTML/index.html
+++ b/Taller 2 CSS/HTML/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="../Assets/Css/style.css">
     <link rel="shortcut icon" href="../Assets/Img/favicon.ico" type="image/x-icon">
-    <title>nombre restaurante</title>
+    <title>Berry</title>
 </head>
 <body>
     <nav class="navbar-rest">
         <div class="logo">
             <img src="../Assets/Img/restaurant.png" alt="" class="size-img-logo">
-            <h5>Pepe</h5>
+            <h5>Berry</h5>
         </div>
         <ul>
             <li>Home</li>
@@ -26,13 +26,13 @@
     </section>
     <section class="container1">
         <div>
-            <p class="texto1"> <a href="https://google.com">Lorem ipsum </a>dolor sit amet consectetur adipisicing elit. Dolor reprehenderit, pariatur at labore, aut eligendi asperiores consectetur totam corporis dolorem adipisci. Rem fugiat, provident unde sed doloremque placeat alias eum similique sapiente aperiam nisi praesentium molestias dolore vitae assumenda delectus iste ut quasi eveniet! Dicta inventore consequuntur enim deserunt ipsam laudantium, recusandae unde repellendus alias, adipisci aperiam fugit cum voluptate quas excepturi temporibus porro error neque odit architecto delectus provident animi tempora. Officiis dolorum, hic, provident esse in dolores aliquid voluptatum alias unde, deleniti eligendi fuga reiciendis ipsum. Voluptates, facilis quam earum voluptatem maxime perferendis. Suscipit possimus reiciendis eum officia porro dignissimos error aliquid placeat, necessitatibus eligendi saepe quia quis autem repellat quasi pariatur modi repudiandae perspiciatis maxime maiores qui fugit? Accusantium pariatur cumque veniam, nulla aperiam esse deleniti, fugit, perspiciatis vitae culpa harum eveniet magni natus minima aut obcaecati repudiandae error consequatur aliquid quasi voluptatibus nemo. Praesentium, qui quia?</p>
+            <p class="texto1"><a href="https://google.com">Lorem ipsum </a>dolor sit amet consectetur adipisicing elit. Dolor reprehenderit, pariatur at labore, aut eligendi asperiores consectetur totam corporis dolorem adipisci. Rem fugiat, provident unde sed doloremque placeat alias eum similique sapiente aperiam nisi praesentium molestias dolore vitae assumenda delectus iste ut quasi eveniet! Dicta inventore consequuntur enim deserunt ipsam laudantium, recusandae unde repellendus alias, adipisci aperiam fugit cum voluptate quas excepturi temporibus porro error neque odit architecto delectus provident animi tempora. Officiis dolorum, hic, provident esse in dolores aliquid voluptatum alias unde, deleniti eligendi fuga reiciendis ipsum. Voluptates, facilis quam earum voluptatem maxime perferendis. Suscipit possimus reiciendis eum officia porro dignissimos error aliquid placeat, necessitatibus eligendi saepe quia quis autem repellat quasi pariatur modi repudiandae perspiciatis maxime maiores qui fugit? Accusantium pariatur cumque veniam, nulla aperiam esse deleniti, fugit, perspiciatis vitae culpa harum eveniet magni natus minima aut obcaecati repudiandae error consequatur aliquid quasi voluptatibus nemo. Praesentium, qui quia?</p>
         </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/tXe56iDop9I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
-    <section>
+    <section class="productos">
         <div>
             <img src="https://via.placeholder.com/300x200" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis fugit, cumque a atque numquam cupiditate nihil id provident blanditiis unde hic esse ratione ut ducimus illo porro ab nam culpa.</p>
