--- a/Taller 2 CSS/HTML/index.html
+++ b/Taller 2 CSS/HTML/index.html
@@ -76,6 +76,7 @@
     </section>
     <footer data-pie-pagina="true">
         <section>
+            <p>Holaaaaaa</p>
             <div class="logo">
                 <img class="size-img-logo" src="../Assets/Img/restaurant.png" alt="">
                 <h5>Berry</h5>
